# re2-c

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac  do-it
src/: Makefile.am  foo.c  foo.h  gen-diag  re2-c.cc  re2-c.h  re2-c_private.h
src/test/: Makefile.am  runscripts  testfoo.c  unittest.h
test/: Makefile.am  testfoo.c
